tests/invalid/oisu_check_add_pragma_errors.err_exp
oisu_check_add_pragma_errors.m:016: Duplicate `:- pragma oisu' declaration for
oisu_check_add_pragma_errors.m:016:   `oisu_check_add_pragma_errors.foo'/0.
oisu_check_add_pragma_errors.m:022: In `:- pragma oisu' declaration:
oisu_check_add_pragma_errors.m:022:   error: undefined type
oisu_check_add_pragma_errors.m:022:   `oisu_check_add_pragma_errors.quux'/0.
oisu_check_add_pragma_errors.m:030: `pragma oisu' declarations must always be
oisu_check_add_pragma_errors.m:030:   exported.
oisu_check_add_pragma_errors.m:030: In the first destructor predicate
oisu_check_add_pragma_errors.m:030:   specification within the `pragma oisu'
oisu_check_add_pragma_errors.m:030:   declaration for
oisu_check_add_pragma_errors.m:030:   `oisu_check_add_pragma_errors.bar'/0:
oisu_check_add_pragma_errors.m:030:   error: predicate
oisu_check_add_pragma_errors.m:030:   `oisu_check_add_pragma_errors.destroy_bar'/3
oisu_check_add_pragma_errors.m:030:   has the wrong arity. Actual arity is 3,
oisu_check_add_pragma_errors.m:030:   expected arity is 2.
oisu_check_add_pragma_errors.m:030: The type in a `pragma oisu' declaration
oisu_check_add_pragma_errors.m:030:   must always be abstract exported.
oisu_check_add_pragma_errors.m:036: `pragma oisu' declarations must always be
oisu_check_add_pragma_errors.m:036:   exported.
